# tts_llm_podcast_project

./: .env  .gitignore  README.md  index.html  main.py  podcast_engine.py  pyproject.toml  requirements.txt  steps.txt
static/: script.js  style.css
static/scripts/: 0eaaa5f3-97cf-4d42-a107-f293ac3a3bf7.txt  3f1e8226-a138-4f8e-a230-43c99e410657.txt
